--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo_social_media.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Catálogo - Tona</title>
+    <title>Tangerina Pet</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Urbanist:wght@100;900&display=swap" rel="stylesheet">
   </head>
   <body>
